<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Webview">
    <item
        android:id="@+id/gallery"
        android:orderInCategory="100"
        android:title="@string/gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/seek"
        android:orderInCategory="100"
        android:title="@string/seek"
        app:showAsAction="never" />
    <item
        android:id="@+id/implicit"
        android:orderInCategory="100"
        android:title="@string/Implicit"
        app:showAsAction="never" />
    <item
        android:id="@+id/media"
        android:orderInCategory="100"
        android:title="@string/media"
        app:showAsAction="never" />
    <item
        android:id="@+id/context"
        android:orderInCategory="100"
        android:title="@string/context"
        app:showAsAction="never" />
    <item
        android:id="@+id/toast"
        android:orderInCategory="100"
        android:title="@string/Toast"
        app:showAsAction="never" />


</menu>
